--- a/local/directive/devices/scene-schedule-dev/sce-sch-TVremote.html
+++ b/local/directive/devices/scene-schedule-dev/sce-sch-TVremote.html
@@ -1,133 +1,147 @@
-<div class="ss-dev-wrap" ng-class="{'show-remote': remote, 'show-remote-numpad': numpad, 'schedule-selected': tvremote.schedule_select, 'scene-selected': tvremote.scene_select}" id="tv-{{tvremote.count}}">
-    <div class="ss-dev-header" ng-click="toggleSelect()">
-        <img ng-show="currentState != 'frame.devices'" src="img/buttons/devIcons/remote.png" class="img-responsive device-icon" ng-click="remote = !remote; numpad = false">
+<div class="device-wrap" ng-class="{'full-remote': fullRemote, 'learning-mode': learningMode}">
+  <span class="device-add-to-favorites">
+    <input type="checkbox" id="add-to-favorites-{{tvinfo.id}}" ng-model="tvinfo.favorites" ng-change="toggleAddToFavorites(tvinfo.favorites, tvinfo.id)">
+    <label for="add-to-favorites-{{tvinfo.id}}" class="device-add-to-favorites-label" title="add to favorites"></label>
+  </span>
+  <img ng-src="img/button/schedule.svg" class="device-schedule-btn" ng-click="deviceSchedule = !deviceSchedule" title="quick schedule">
+  <div class="device-header">
+    <img ng-src="img/device/remote.png" class="device-icon" ng-show="currentState === 'frame.devices'">
+    <img ng-src="img/device/remote.png" class="device-icon" ng-click="fullRemote = true" title="full remote" ng-hide="currentState === 'frame.devices'">
+    <div class="device-content-data">
+      <p>{{tvinfo.name}}</p>
+      <p>{{tvinfo.type}}</p>
+      <div class="remote-learn-wrap" ng-hide="currentState === 'frame.devices'">
+        <input type="checkbox" id="learning-mode-{{tvinfo.count}}" ng-model="learningMode">
+        <label for="learning-mode-{{tvinfo.count}}" class="button">Learning mode</label>
+      </div>
+    </div>
+  </div>
 
-        <div class="device-content-data">
-            <p>{{tvremote.name}}</p>
-            <p>{{tvremote.type}}</p>
+  <div class="device-footer">
+    <div class="device-footer-btn-wrap">
+      <button class="device-btn" ng-class="{'device-btn-active': ''}" ng-click="cRemoteAction(tvinfo.id, 'POWER')" id="remote-quick-POWER">Power</button>
+    </div>
+    <div class="device-footer-option-wrap">
+      <button class="remote-device-btn remote-device-btn-up" ng-click="cRemoteAction(tvinfo.id, 'CHUP')" id="remote-quick-CHUP" ng-show="quickRadioBtn === 'ch'"></button>
+      <button class="remote-device-btn remote-device-btn-up" ng-click="cRemoteAction(tvinfo.id, 'VOLUP')" id="remote-quick-VOLUP" ng-show="quickRadioBtn === 'vol'"></button>
+      <span class="remote-radio-wrap">
+        <input type="radio" name="remote-ch-vol-{{tvinfo.count}}" id="remote-radio-ch-{{tvinfo.count}}" value="ch" ng-model="quickRadioBtn">
+        <label for="remote-radio-ch-{{tvinfo.count}}">CH</label>
+      </span>
+      <span class="remote-radio-wrap">
+        <input type="radio" name="remote-ch-vol-{{tvinfo.count}}" id="remote-radio-vol-{{tvinfo.count}}" value="vol" ng-model="quickRadioBtn">
+        <label for="remote-radio-vol-{{tvinfo.count}}">Vol</label>
+      </span>
+      <button class="remote-device-btn remote-device-btn-down" ng-click="cRemoteAction(tvinfo.id, 'CHDOWN')" id="remote-quick-CHDOWN" ng-show="quickRadioBtn === 'ch'"></button>
+      <button class="remote-device-btn remote-device-btn-down" ng-click="cRemoteAction(tvinfo.id, 'VOLDOWN')" id="remote-quick-VOLDOWN" ng-show="quickRadioBtn === 'vol'"></button>
+    </div>
+  </div>
+
+  <!-- full remote !-->
+  <div class="remote-full-wrap" ng-show="fullRemote || learningMode">
+    <img src="img/button/cross-dark.png" class="close-device-options" ng-click="fullRemote = false; learningMode = false">
+    <div class="remote-full-row">
+      <button type="button" class="remote-top-btn remote-power-btn" ng-click="cRemoteAction(tvinfo.id, 'POWER')" id="remote-POWER">Power</button>
+      <button type="button" class="remote-top-btn remote-menu-btn" ng-click="cRemoteAction(tvinfo.id, 'MENU')" id="remote-MENU">Menu</button>
+      <button type="button" class="remote-top-btn remote-source-btn" ng-click="cRemoteAction(tvinfo.id, 'SOURCE')" id="remote-SOURCE">Source</button>
+    </div>
+    <h5>{{tvinfo.name}} remote</h5>
+    <div class="remote-full-row" ng-hide="numpad">
+      <div>
+        <button type="button" class="remote-cirucal-btn remote-plus-btn" ng-click="cRemoteAction(tvinfo.id, 'VOLUP')" id="remote-VOLUP"></button>
+        <h5>Vol</h5>
+        <button type="button" class="remote-cirucal-btn remote-minus-btn" ng-click="cRemoteAction(tvinfo.id, 'VOLDOWN')" id="remote-VOLDOWN"></button>
+      </div>
+
+      <div>
+        <button type="button" class="remote-rect-btn remote-up-btn" ng-click="cRemoteAction(tvinfo.id, 'UP')" id="remote-UP"></button>
+        <div>
+          <button type="button" class="remote-rect-btn remote-left-btn" ng-click="cRemoteAction(tvinfo.id, 'LEFT')" id="remote-LEFT"></button>
+          <button type="button" class="remote-none-btn remote-ok-btn" ng-click="cRemoteAction(tvinfo.id, 'OK')" id="remote-OK">OK</button>
+          <button type="button" class="remote-rect-btn remote-right-btn" ng-click="cRemoteAction(tvinfo.id, 'RIGHT')" id="remote-RIGHT"></button>
         </div>
+        <button type="button" class="remote-rect-btn remote-down-btn" ng-click="cRemoteAction(tvinfo.id, 'DOWN')" id="remote-DOWN"></button>
+      </div>
+
+      <div>
+        <button type="button" class="remote-cirucal-btn remote-plus-btn" ng-click="cRemoteAction(tvinfo.id, 'CHUP')" id="remote-CHUP"></button>
+        <h5>CH</h5>
+        <button type="button" class="remote-cirucal-btn remote-minus-btn" ng-click="cRemoteAction(tvinfo.id, 'CHDOWN')" id="remote-CHDOWN"></button>
+      </div>
     </div>
 
-    <!-- remote !-->
-    <div class="device-options  ss-remote-options" ng-show="remote">
-        <div class="remote-row HELPER_jc-betweem">
-            <div class="remote-btn remote-btn-wide rem-power" id="rem-power" ng-click="tvActiveKey(tvremote.count, 'POWER')">
-            </div>
-            <div class="remote-btn remote-btn-wide rem-source" id="rem-source" ng-click="tvActiveKey(tvremote.count, 'SOURCE')">
-                Source
-            </div>
-        </div>
+    <!-- numpad !-->
+    <div class="remote-full-col" ng-show="numpad">
+      <div>
+        <button type="button" class="remote-numb-btn remote-num1-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_1')" id="remote-NUM_1">1</button>
+        <button type="button" class="remote-numb-btn remote-num2-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_2')" id="remote-NUM_2">2</button>
+        <button type="button" class="remote-numb-btn remote-num3-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_3')" id="remote-NUM_3">3</button>
+      </div>
 
-        <div class="remote-row HELPER_jc-betweem">
-            <div class="remote-btn remote-btn-wide rem-tools" id="rem-tools" ng-click="tvActiveKey(tvremote.count, 'TOOLS')">
-                Tools
-            </div>
-            <div class="remote-btn remote-btn-wide rem-info" id="rem-info" ng-click="tvActiveKey(tvremote.count, 'INFO')">
-                INFO
-            </div>
-        </div>
+      <div>
+        <button type="button" class="remote-numb-btn remote-num4-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_4')" id="remote-NUM_4">4</button>
+        <button type="button" class="remote-numb-btn remote-num5-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_5')" id="remote-NUM_5">5</button>
+        <button type="button" class="remote-numb-btn remote-num6-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_6')" id="remote-NUM_6">6</button>
+      </div>
 
-        <div class="remote-btn remote-btn-gray rem-up" id="rem-up" ng-click="tvActiveKey(tvremote.count, 'UP')"></div>
+      <div>
+        <button type="button" class="remote-numb-btn remote-num7-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_7')" id="remote-NUM_7">7</button>
+        <button type="button" class="remote-numb-btn remote-num8-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_8')" id="remote-NUM_8">8</button>
+        <button type="button" class="remote-numb-btn remote-num9-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_9')" id="remote-NUM_9">9</button>
+      </div>
 
-        <div class="remote-row HELPER_jc-center">
-            <div class="remote-btn remote-btn-gray rem-left" id="rem-left" ng-click="tvActiveKey(tvremote.count, 'LEFT')"></div>
-            <div class="remote-btn rem-ok" id="rem-ok" ng-click="tvActiveKey(tvremote.count, 'OK')">OK</div>
-            <div class="remote-btn remote-btn-gray rem-right" id="rem-right" ng-click="tvActiveKey(tvremote.count, 'RIGHT')"></div>
-        </div>
-
-        <div class="remote-btn remote-btn-gray rem-down" id="rem-down" ng-click="tvActiveKey(tvremote.count, 'DOWN')"></div>
-
-        <div class="remote-row HELPER_jc-betweem">
-            <div class="remote-btn remote-btn-wide rem-return" id="rem-return" ng-click="tvActiveKey(tvremote.count, 'RETURN')">
-                Return
-            </div>
-            <div class="remote-btn remote-btn-wide rem-exit" id="rem-exit" ng-click="tvActiveKey(tvremote.count, 'EXIT')">
-                Exit
-            </div>
-        </div>
-
-        <div class="remote-row HELPER_jc-betweem">
-            <div class="remote-btn remote-btn-gray rem-volup" id="rem-volup" ng-click="tvActiveKey(tvremote.count, 'VOLUP')">
-                Vol
-            </div>
-            <div class="remote-btn rem-mute" id="rem-mute" ng-click="tvActiveKey(tvremote.count, 'MUTE')">
-                Mute
-            </div>
-            <div class="remote-btn rem-settings" id="rem-settings" ng-click="tvActiveKey(tvremote.count, 'SETTINGS')">
-                Settings
-            </div>
-            <div class="remote-btn remote-btn-gray rem-chup" id="rem-chup" ng-click="tvActiveKey(tvremote.count, 'CHUP')">
-                CH
-            </div>
-        </div>
-
-        <div class="remote-row HELPER_jc-betweem">
-            <div class="remote-btn remote-btn-gray rem-voldown" id="rem-voldown" ng-click="tvActiveKey(tvremote.count, 'VOLDOWN')">
-                Vol
-            </div>
-            <div class="remote-btn rem-txt" id="rem-txt" ng-click="tvActiveKey(tvremote.count, 'TXT')">
-                Txt
-            </div>
-            <div class="remote-btn rem-menu" id="rem-menu" ng-click="tvActiveKey(tvremote.count, 'MENU')">
-                Menu
-            </div>
-            <div class="remote-btn remote-btn-gray rem-chdown" id="rem-chdown" ng-click="tvActiveKey(tvremote.count, 'CHDOWN')">
-                CH
-            </div>
-        </div>
-
+      <div>
+        <button type="button" class="remote-numb-btn remote-num0-btn" ng-click="cRemoteAction(tvinfo.id, 'NUM_0')" id="remote-NUM_0">0</button>
+      </div>
+    </div>
+    <div class="remote-full-row">
+      <button type="button" class="remote-none-btn remote-numpad-btn" ng-click="numpad = !numpad">Numpad</button>
     </div>
 
-    <!-- numpad btns !-->
-    <div class="device-options ss-remote-options" ng-show="numpad">
-        <div class="remote-row HELPER_jc-center">
-            <div class="remote-btn remote-btn-gray numpad-btn rem-num_1" id="rem-num_1" ng-click="tvActiveKey(tvremote.count, 'NUM_1')">
-                1
-            </div>
-            <div class="remote-btn remote-btn-gray numpad-btn rem-num_2" id="rem-num_2" ng-click="tvActiveKey(tvremote.count, 'NUM_2')">
-                2
-            </div>
-            <div class="remote-btn remote-btn-gray numpad-btn rem-num_3" id="rem-num_3" ng-click="tvActiveKey(tvremote.count, 'NUM_3')">
-                3
-            </div>
-        </div>
-
-        <div class="remote-row HELPER_jc-center">
-            <div class="remote-btn remote-btn-gray numpad-btn rem-num_4" id="rem-num_4" ng-click="tvActiveKey(tvremote.count, 'NUM_4')">
-                4
-            </div>
-            <div class="remote-btn remote-btn-gray numpad-btn rem-num_5" id="rem-num_5" ng-click="tvActiveKey(tvremote.count, 'NUM_5')">
-                5
-            </div>
-            <div class="remote-btn remote-btn-gray numpad-btn rem-num_6" id="rem-num_6" ng-click="tvActiveKey(tvremote.count, 'NUM_6')">
-                6
-            </div>
-        </div>
-
-        <div class="remote-row HELPER_jc-center">
-            <div class="remote-btn remote-btn-gray numpad-btn rem-num_7" id="rem-num_7" ng-click="tvActiveKey(tvremote.count, 'NUM_7')">
-                7
-            </div>
-            <div class="remote-btn remote-btn-gray numpad-btn rem-num_8" id="rem-num_8" ng-click="tvActiveKey(tvremote.count, 'NUM_8')">
-                8
-            </div>
-            <div class="remote-btn remote-btn-gray numpad-btn rem-num_9" id="rem-num_9" ng-click="tvActiveKey(tvremote.count, 'NUM_9')">
-                9
-            </div>
-        </div>
-
-
-        <div class="remote-row HELPER_jc-center">
-            <div class="remote-btn remote-btn-gray numpad-btn rem-num_0" id="rem-num_0" ng-click="tvActiveKey(tvremote.count, 'NUM_0')">
-                0
-            </div>
-        </div>
+    <!-- wait for learn button !-->
+    <div class="remote-learn-mode-instructions" ng-if="learnKey">
+      <h4>Learn key</h4>
+      <div class="remote-learn-mode-key-wrap">
+        <h3>{{learnKey}}</h3>
+      </div>
+      <p>Point your physical remote to the nHome Bridge and press the button you want to program</p>
     </div>
+  </div>
 
-    <!-- display numpad icon !-->
-    <div class="ss-dev-footer" ng-class="{'scene-selected-footer': tvremote.scene_select}">
-        <span class="remote-numpad-btn" ng-click="numpad = !numpad; remote = false">
-            NUMPAD
-        </span>
+
+  <!-- schedule !-->
+  <div class="option-wrap" ng-show="deviceSchedule">
+    <button type="reset" class="close-device-options close-form-btn" ng-click="deviceSchedule = false">
+    </button>
+    <form class="add-schedule-dev-form" id="dev-schedule-form-{{tvinfo.id}}" ng-submit="quickSchedule(tvinfo, 'POWER')">
+      <p>Remote will
+        <span class="color-blue">toggle</span>
+         TV power at:
+      </p>
+      <input type="number" class="form-number" id="device-schedule-hours-{{tvinfo.id}}" placeholder="Hours" min="0" max="23" required ng-blur="checkHours($event)">
+      <input type="number" class="form-number" id="device-schedule-minutes-{{tvinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-blur="checkMinutes($event)">
+
+      <div class="add-schedule-dev-options-wrap">
+        <div class="add-schedule-dev-option">
+          <small>Daily</small>
+          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{sinfo.id}}" ng-model="deviceScheduleRepeat">
+          <label for="schedule-device-daily-{{sinfo.id}}" class="radio-label" title="schedule will repeat daily"></label>
+        </div>
+        <div class="add-schedule-dev-option">
+          <small>Once</small>
+          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{sinfo.id}}" ng-model="deviceScheduleRepeat">
+          <label for="schedule-device-once-{{sinfo.id}}" class="radio-label" title="schedule will fire just once"></label>
+        </div>
+      </div>
+
+      <small ng-if="scheduleSuccess" class="color-green pop-up">Scheduled!</small>
+    </form>
+    <div class="device-footer devices-schedule-footer">
+      <div class="device-footer-btn-wrap">
+      </div>
+      <div class="device-footer-option-wrap">
+        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{tvinfo.id}}">Schedule</button>
+      </div>
     </div>
+  </div>
 </div>
