--- a/local/directive/googleMaps.html
+++ b/local/directive/googleMaps.html
@@ -1,4 +1,4 @@
 <div>
-	<input id="pac-input" class="form-input" type="text" placeholder="Enter a location">
+	<input id="pac-input" class="google-map-input" type="text" placeholder="Enter a location">
 	<div class="google-map" id="map"></div>
 </div>
