--- a/local/index.html
+++ b/local/index.html
@@ -52,11 +52,9 @@
   <script src="js/libraries/socket.io.js"></script>
   <!-- Google Maps -->
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDADXlpX2alBz67rIO3mNGK_0tmghDrRLs&libraries=places"></script>
-  <!-- roundSlider jQuery plugin -->
-  <script src="js/roundslider.min.js"></script>
   <!-- color picker !-->
-  <script src="js/tinycolor-min.js"></script>
-  <script src="js/bootstrap.colorpickersliders.min.js"></script>
+  <script defer src="js/tinycolor-min.js"></script>
+  <script defer src="js/bootstrap.colorpickersliders.min.js"></script>
 
 
   <!-- ng module, ui router logic -->
@@ -86,14 +84,15 @@
   <script defer src="js/devices/switch.js"></script>
   <script defer src="js/devices/remote.js"></script>
   <script defer src="js/devices/scene.js"></script>
+  <script defer src="js/devices/thermostat.js"></script>
+  <script defer src="js/devices/shutter.js"></script>
   <script defer src="js/devices/schedule.js"></script>
   <script defer src="js/devices/alarm.js"></script>
   <script defer src="js/devices/camera.js"></script>
   <script defer src="js/devices/sensor.js"></script>
+  <script defer src="js/devices/devices-dev.js"></script>
   <script defer src="js/service/googleMaps.js"></script>
   <!--
-  <script src="js/devices/thermostat.js"></script>
-  <script src="js/devices/shutter.js"></script>
   <script src="js/devices/ac-remote.js"></script>
   !-->
 
