--- a/local/directive/devices/light.html
+++ b/local/directive/devices/light.html
@@ -4,9 +4,6 @@
     <label for="add-to-favorites-{{linfo.id}}" class="device-add-to-favorites-label" title="add to favorites"></label>
   </span>
   <img ng-src="img/button/schedule.svg" class="device-schedule-btn" ng-click="deviceSchedule = !deviceSchedule" title="quick schedule">
-  <div class="device-blacklisted" ng-show="linfo.blacklisted">
-    <button type="button" name="unblacklist" title="unblacklist device" class="button unblacklist-btn" ng-click="unblacklistDev(linfo.id)">Device locked</button>
-  </div>
   <div class="device-header">
     <img ng-src="{{lightIcon}}" class="device-icon" ng-click="toggleDevicePowerState(linfo.id)" title="toggle state">
     <div class="device-content-data">
@@ -36,7 +33,7 @@
   <!-- color picker !-->
   <div class="option-wrap" ng-show="colorPicker">
     <img src="img/button/cross-dark.png" class="close-device-options" ng-click="colorPicker = false">
-    <div id="light-color" class="light-set-color"></div>
+    <div id="light-color-{{linfo.count}}" class="light-set-color"></div>
     <div>
       <button class="device-options-btn set-color-btn" ng-click="setColor(linfo.id, linfo.state.hsl)">Set color</button>
     </div>
@@ -66,6 +63,20 @@
       </p>
       <input type="number" class="form-number" id="device-schedule-hours-{{linfo.id}}" placeholder="Hours" min="0" max="23" required ng-blur="checkHours($event)">
       <input type="number" class="form-number" id="device-schedule-minutes-{{linfo.id}}" placeholder="Minutes" min="0" max="59" required ng-blur="checkMinutes($event)">
+
+      <div class="add-schedule-dev-options-wrap">
+        <div class="add-schedule-dev-option">
+          <small>Daily</small>
+          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{linfo.id}}" ng-model="deviceScheduleRepeat">
+          <label for="schedule-device-daily-{{linfo.id}}" class="radio-label" title="schedule will repeat daily"></label>
+        </div>
+        <div class="add-schedule-dev-option">
+          <small>Once</small>
+          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{linfo.id}}" ng-model="deviceScheduleRepeat">
+          <label for="schedule-device-once-{{linfo.id}}" class="radio-label" title="schedule will fire just once"></label>
+        </div>
+      </div>
+
       <small ng-if="scheduleSuccess" class="color-green pop-up">Scheduled!</small>
     </form>
 
@@ -75,8 +86,8 @@
         <button type="button" class="device-btn" ng-class="{'device-btn-active': !scheduleState}" ng-click="scheduleState = false">Off</button>
       </div>
       <div class="device-footer-option-wrap">
-      <button type="submit" class="device-options-btn" form="dev-schedule-form-{{linfo.id}}">Schedule</button>
-    </div>
+        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{linfo.id}}">Schedule</button>
+      </div>
     </div>
   </div>
 </div>
