--- a/local/directive/devices/scene-schedule-dev/sce-sch-switch.html
+++ b/local/directive/devices/scene-schedule-dev/sce-sch-switch.html
@@ -1,6 +1,6 @@
 <div class="device-wrap">
   <div class="device-header">
-    <img ng-src="{{switchIcon}}" class="device-icon" ng-click="sinfo.value = !sinfo.value" title="toggle state">
+    <img ng-src="{{switchIcon}}" class="device-icon" ng-click="deviceStateToggle(sinfo)" title="toggle state">
     <div class="device-content-data">
       <p>{{sinfo.name}}</p>
       <p>{{sinfo.type}}</p>
@@ -11,8 +11,8 @@
   <!-- display ON/OFF switch !-->
   <div class="device-footer">
     <div class="device-footer-btn-wrap">
-      <button class="device-btn" ng-class="{'device-btn-active': sinfo.value}" ng-click="sinfo.value = true">On</button>
-      <button class="device-btn" ng-class="{'device-btn-active': !sinfo.value}" ng-click="sinfo.value = false">Off</button>
+      <button class="device-btn" ng-class="{'device-btn-active': sinfo.value}" ng-click="deviceStateOn(sinfo)">On</button>
+      <button class="device-btn" ng-class="{'device-btn-active': !sinfo.value}" ng-click="deviceStateOff(sinfo)">Off</button>
     </div>
     <div class="device-footer-option-wrap">
     </div>
