--- a/local/directive/devices/scene.html
+++ b/local/directive/devices/scene.html
@@ -1,13 +1,52 @@
 <div class="scene-box">
-    <div class="sce-box-content">
-        <img src="img/device/scene-icon.png" class="device-icon" ng-click="setScene(scinfo.id)">
-        <div>
-            <p>{{scinfo.name}}</p>
-            <p>{{scinfo.schedule | date: "dd/MM/yy"}}</p>
+  <img ng-src="img/button/schedule.svg" class="scene-quick-schedule-btn" ng-click="deviceSchedule = !deviceSchedule" title="quick schedule">
+  <div class="sce-box-content">
+    <img src="img/device/scene-icon.png" class="device-icon" ng-click="setScene(scinfo.id)">
+    <div>
+      <p>{{scinfo.name}}</p>
+      <p>{{scinfo.schedule | date: "dd/MM/yy"}}</p>
+    </div>
+  </div>
+  <div class="sce-box-footer">
+    <p ng-click="editScene(scinfo)">Edit scene</p>
+    <img src="img/button/cross.png" class="scene-delete-btn" ng-click="deleteScene(scinfo.id)">
+  </div>
+
+  <!-- schedule !-->
+  <div class="option-wrap" ng-show="deviceSchedule">
+    <button type="reset" class="close-device-options close-form-btn" ng-click="deviceSchedule = false">
+    </button>
+    <form class="add-schedule-dev-form" id="dev-schedule-form-{{scinfo.id}}" ng-submit="quickSchedule(scinfo)">
+      <p>Scene will turn
+        <span class="color-blue">trigger</span>
+        at:
+      </p>
+      <input type="number" class="form-number" id="device-schedule-hours-{{scinfo.id}}" placeholder="Hours" min="0" max="23" required ng-blur="checkHours($event)">
+      <input type="number" class="form-number" id="device-schedule-minutes-{{scinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-blur="checkMinutes($event)">
+
+      <div class="add-schedule-dev-options-wrap">
+        <div class="add-schedule-dev-option">
+          <small>Daily</small>
+          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{scinfo.id}}" ng-model="deviceScheduleRepeat">
+          <label for="schedule-device-daily-{{scinfo.id}}" class="radio-label" title="schedule will repeat daily"></label>
         </div>
+        <div class="add-schedule-dev-option">
+          <small>Once</small>
+          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{scinfo.id}}" ng-model="deviceScheduleRepeat">
+          <label for="schedule-device-once-{{scinfo.id}}" class="radio-label" title="schedule will fire just once"></label>
+        </div>
+      </div>
+
+      <small ng-if="scheduleSuccess" class="color-green pop-up">Scheduled!</small>
+    </form>
+
+    <div class="device-footer devices-schedule-footer">
+      <div class="device-footer-btn-wrap">
+
+      </div>
+      <div class="device-footer-option-wrap">
+        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{scinfo.id}}">Schedule</button>
+      </div>
     </div>
-    <div class="sce-box-footer">
-        <p ng-click="editScene(scinfo)">Edit scene</p>
-        <img src="img/button/cross.png" class="scene-delete-btn" ng-click="deleteScene(scinfo.id)">
-    </div>
+  </div>
 </div>
