--- a/local/directive/devices/shutter.html
+++ b/local/directive/devices/shutter.html
@@ -1,42 +1,68 @@
-<div class="device-wrap" ng-class="{'show-thermo-slider': shutterSlider, 'show-more-options': editDevice}" id="shutter-{{shinfo.count}}">
-    <div class="device-header">
-        <img src="img/buttons/devIcons/shutters.png" class="img-responsive device-icon" ng-click="shutterSlider = !shutterSlider">
-        <div class="device-content-data">
-            <p>{{shinfo.name}}</p>
-            <p>{{shinfo.type}}</p>
+<div class="device-wrap">
+  <span class="device-add-to-favorites">
+    <input type="checkbox" id="add-to-favorites-{{shinfo.id}}" ng-model="shinfo.favorites" ng-change="toggleAddToFavorites(shinfo.favorites, shinfo.id)">
+    <label for="add-to-favorites-{{shinfo.id}}" class="device-add-to-favorites-label" title="add to favorites" ng-click="bbb()"></label>
+  </span>
+  <img ng-src="img/button/schedule.svg" class="device-schedule-btn" ng-click="deviceSchedule = !deviceSchedule" title="quick schedule">
+  <div class="device-blacklisted" ng-show="shinfo.blacklisted">
+    <button type="button" name="unblacklist" title="unblacklist device" class="button unblacklist-btn" ng-click="unblacklistDev(shinfo.id)">Device locked</button>
+  </div>
+
+  <div class="device-header">
+    <img ng-src="{{shutterIcon}}" class="device-icon" ng-click="toggleDevicePowerState(shinfo.id)" title="toggle state">
+    <div class="device-content-data">
+      <p>{{shinfo.name}}</p>
+      <p>{{shinfo.type}}</p>
+      <p>{{shinfo.module}}</p>
+    </div>
+  </div>
+
+  <!-- display +/- set thermostat !-->
+  <div class="device-footer">
+    <div class="device-footer-btn-wrap">
+      <button class="device-btn-opt" ng-click="openShutter(shinfo)" ng-class="{'success-green': openSuccess}">Open</button>
+      <butotn class="device-btn-opt" ng-click="stopShutter(shinfo)" ng-class="{'success-red': stopSuccess}">STOP</butotn>
+      <button class="device-btn-opt" ng-click="closeShutter(shinfo)" ng-class="{'success-green': closeSuccess}">Close</button>
+    </div>
+  </div>
+
+  <!-- schedule !-->
+  <div class="option-wrap" ng-show="deviceSchedule">
+    <button type="reset" class="close-device-options close-form-btn" ng-click="deviceSchedule = false">
+    </button>
+    <form class="add-schedule-dev-form" id="dev-schedule-form-{{shinfo.id}}" ng-submit="quickSchedule(shinfo, shutterState)">
+      <p>Shutter will
+        <span ng-show="shutterState === 'open'" class="color-blue">open</span>
+        <span ng-show="shutterState === 'close'" class="color-orange">close</span>
+        at:
+      </p>
+      <input type="number" class="form-number" id="device-schedule-hours-{{shinfo.id}}" placeholder="Hours" min="0" max="23" required ng-blur="checkHours($event)">
+      <input type="number" class="form-number" id="device-schedule-minutes-{{shinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-blur="checkMinutes($event)">
+
+      <div class="add-schedule-dev-options-wrap">
+        <div class="add-schedule-dev-option">
+          <small>Daily</small>
+          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{shinfo.id}}" ng-model="deviceScheduleRepeat">
+          <label for="schedule-device-daily-{{shinfo.id}}" class="radio-label" title="schedule will repeat daily"></label>
         </div>
-    </div>
-
-    <!-- shutter slider !-->
-    <div class="device-options device-options-shutter" ng-show="shutterSlider">
-        <img src="img/buttons/devButtons/shutter-header.png" class="img-responsive">
-        <div id="shWrap" class="shutter-wrap">
-            <div id="shFilter" class="shutter-filter">
-                <img id="handle" src="img/buttons/devButtons/shutter-handle.png" class="img-responsive">
-            </div>
+        <div class="add-schedule-dev-option">
+          <small>Once</small>
+          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{shinfo.id}}" ng-model="deviceScheduleRepeat">
+          <label for="schedule-device-once-{{shinfo.id}}" class="radio-label" title="schedule will fire just once"></label>
         </div>
-        <button class="btn device-set-btn" ng-click="setShutterValue(shinfo.id)">SET</button>
-    </div>
+      </div>
 
+      <small ng-if="scheduleSuccess" class="color-green pop-up">Scheduled!</small>
+    </form>
 
-    <!-- edit device options !-->
-    <div class="device-edit" ng-show="editDevice">
-        <label for="dev-name" class="sr-only">Name of Device</label>
-        <input type="text" name="dev-name" ng-model="shinfo.name" class="form-text" placeholder="Device Name" maxlength="15">
-
-        <div class="device-btns-wrap">
-            <button type="submit" class="btn device-edit-btn" ng-click="changeName()">Rename</button>
-        </div>
+    <div class="device-footer devices-schedule-footer">
+      <div class="device-footer-btn-wrap">
+        <button type="button" class="device-btn" ng-click="shutterState = 'open'" ng-class="{'device-btn-active': shutterState === 'open'}">Open</button>
+        <button type="button" class="device-btn" ng-click="shutterState = 'close'" ng-class="{'device-btn-active': shutterState === 'close'}">Close</button>
+      </div>
+      <div class="device-footer-option-wrap">
+        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{shinfo.id}}">Schedule</button>
+      </div>
     </div>
-
-    <!-- display open/close/stop !-->
-    <div class="device-footer">
-        <span class="device-btn" ng-click="fullOpen(shinfo.id)">Open</span>
-        <span class="device-btn" ng-click="shutterStop(shinfo.id)">STOP</span>
-        <span class="device-btn" ng-click="fullClose(shinfo.id)">Close</span>
-    </div>
-    <!-- display in devices !-->
-    <div class="device-footer" ng-show="devicesState === 'frame.devices'">
-        <span class="device-btn device-options-gear" ng-click="editDevice = !editDevice"></span>
-    </div>
+  </div>
 </div>
