--- a/local/html_route/all_rooms_template.html
+++ b/local/html_route/all_rooms_template.html
@@ -20,8 +20,12 @@
   </div>
   <!-- room quick select !-->
   <div class="category-wrap">
-    <small class="color-transparent">Jump to</small>
-    <div class="dropdown">
+    <!--<small class="color-transparent">Add new room</small>!-->
+    <button type="button" class="button add-new blue-btn" ng-click="allRooms.addRoomForm = !allRooms.addRoomForm" ng-hide="allRooms.addRoomForm" title="add room"></button>
+    <form ng-submit="allRooms.addRoom($event)" autocomplete="off" ng-if="allRooms.addRoomForm">
+      <input type="text" placeholder="Add new room" pattern=".{3,15}" id="add-room-name" class="form-input" required title="new room name">
+    </form>
+    <!--<div class="dropdown">
       <button type="button" class="button dropdown-toggle category-dropdown" id="categories-dropdown" data-toggle="dropdown">
         {{allRooms.activeRoom.name}}
       </button>
@@ -30,47 +34,67 @@
         <li role="presentation" ng-repeat="category in allRooms.categories track by category.id">
           <a role="menuitem" tabindex="-1" href="#" ng-click="allRooms.jumpToRoom(category)">{{category.name}}</a>
         </li>
+        <li class="button blue-btn server-log-load-more" ng-click="addCategory = !addCategory">
+          <p>Add room</p>
+          <img src="img/button/plus-lblue.png">
+        </li>
+        <li ng-show="addCategory">
+          <form ng-submit="allRooms.addCategory" class="add-category-form">
+            <input type="text" pattern=".{3,15}" required class="form-input" placeholder="Category name" id="new-category-name">
+            <button type="reset" class="button orange-btn" ng-click="addCategory = false">Cancel</button>
+            <button type="submit" class="button blue-btn">Submit</button>
+          </form>
+        </li>
       </ul>
-    </div>
+    </div>!-->
   </div>
 </div>
 
 <div class="all-rooms-view-point">
   <div ng-repeat="category in allRooms.categories" id="{{category.id}}">
     <div class="template-nav">
-      <h3>{{category.name}}</h3>
+      <h3 class="category-name" ng-click="categoryName = !categoryName" ng-hide="categoryName">{{category.name}}</h3>
+
+      <!-- rename room !-->
+      <form ng-submit="allRooms.changeCategoryName(category)" ng-show="categoryName" class="category-name-form">
+        <input type="text" pattern=".{3,15}" required class="form-input" placeholder="Category name" ng-model="category.name">
+        <button type="submit" class="button category-name-submit" ng-click="categoryName = false"></button>
+        <button type="button" class="button category-name-reset" ng-click="categoryName = false"></button>
+        <button type="reset" class="button category-name-delete" ng-click="allRooms.deleteCategory(category)"></button>
+      </form>
+
+      <!-- sensors !-->
+      <div class="sensor-wrap">
+        <div class="info-sensor" ng-repeat="sensor in allRooms.sensor[category.id] track by sensor.id" title="{{sensor.name}}">
+          <img ng-if="sensor.subtype === 'temperature'" src="img/sensors/temp.png">
+          <img ng-if="sensor.subtype === 'humidity'" src="img/sensors/humidity.png">
+          <img ng-if="sensor.subtype === 'co2'" src="img/sensors/co.png">
+          <img ng-if="sensor.subtype === 'noise'" src="img/sensors/noise.png">
+          <img ng-if="sensor.subtype === 'rain'" src="img/sensors/rain.png">
+          <img ng-if="sensor.subtype === 'co-alarm'" src="img/sensors/co.png">
+          <img ng-if="sensor.subtype === 'light'" src="img/sensors/lux.png">
+          <img ng-if="sensor.subtype === 'motion'" src="img/sensors/motion.png">
+          <img ng-if="sensor.subtype === 'door' && sensor.value === false" src="img/sensors/door-close.png">
+          <img ng-if="sensor.subtype === 'door' && sensor.value === true" src="img/sensors/door-open.png">
+          <div class="sensor-details">
+            <h1>{{sensor.value}}</h1>
+            <!--<p>{{sensor.name}}</p>!-->
+          </div>
+        </div>
+        <small class="color-transparent margin-auto" ng-show="allRooms.sensor[category.id].length === 0">
+          You don't have sensors in this room. Go <a ui-sref="frame.devices">assign</a>
+        </small>
+      </div>
       <div class="horizontal-line"></div>
     </div>
-
-    <!-- sensors !-->
-    <div class="sensor-wrap">
-      <div class="info-sensor" ng-repeat="sensor in allRooms.sensor[category.id] track by sensor.id">
-        <img ng-if="sensor.subtype === 'temperature'" src="img/sensors/temp.png">
-        <img ng-if="sensor.subtype === 'humidity'" src="img/sensors/humidity.png">
-        <img ng-if="sensor.subtype === 'co2'" src="img/sensors/co.png">
-        <img ng-if="sensor.subtype === 'noise'" src="img/sensors/noise.png">
-        <img ng-if="sensor.subtype === 'rain'" src="img/sensors/rain.png">
-        <img ng-if="sensor.subtype === 'co-alarm'" src="img/sensors/co.png">
-        <img ng-if="sensor.subtype === 'light'" src="img/sensors/lux.png">
-        <img ng-if="sensor.subtype === 'motion'" src="img/sensors/motion.png">
-        <img ng-if="sensor.subtype === 'door' && sensor.value === false" src="img/sensors/door-close.png">
-        <img ng-if="sensor.subtype === 'door' && sensor.value === true" src="img/sensors/door-open.png">
-        <div class="sensor-details">
-          <h1>{{sensor.value}}</h1>
-          <p>{{sensor.name}}</p>
-        </div>
-      </div>
-      <small class="color-transparent" ng-show="allRooms.sensor[category.id].length === 0">
-        You don't have sensors in this room. Go <a ui-sref="frame.devices">assign</a>
-      </small>
-    </div>
+    <br>
     <!-- rest of devices !-->
     <div class="display-devices-row">
       <switch ng-repeat="switch in allRooms.switch[category.id] track by switch.id" sinfo="switch"></switch>
       <light ng-repeat="light in allRooms.light[category.id] track by light.id" linfo="light"></light>
-      <thermostat ng-repeat="thermo in allRooms.thermo[category.id] track by thermo.id" tinfo="thermo"></thermostat>
+      <thermostat ng-repeat="thermo in allRooms.thermostat[category.id] track by thermo.id" tinfo="thermo"></thermostat>
       <shutter ng-repeat="shutter in allRooms.shutter[category.id] track by shutter.id" shinfo="shutter"></shutter>
-      <remote ng-repeat="cRemote in allRooms.tvRemote[category.id] track by cRemote.id" tvinfo="cRemote"></remote>
+      <remote ng-repeat="cRemote in allRooms.tv[category.id] track by cRemote.id" tvinfo="cRemote"></remote>
     </div>
 
     <div class="display-devices-row">
