--- a/local/html_route/devices_template.html
+++ b/local/html_route/devices_template.html
@@ -21,78 +21,81 @@
 </div>
 
 <!-- show all lights !-->
-<section class="display-devices" ng-if="device.allLights.length">
-  <h4>Lights</h4>
-  <hr>
-  <div class="row display-devices-row" id="lights">
-
-    <light ng-repeat="light in device.allLights" linfo="light" ng-click="device.editDevice(light)"></light>
+<section class="display-devices" ng-if="device.allDev.light.length">
+  <h4 data-toggle="collapse" data-target="#lights-list">Lights</h4>
+  <div class="collapse" id="lights-list">
+    <devices-dev ng-repeat="light in device.allDev.light" devinfo="light"></devices-dev>
   </div>
+  <hr>
 </section>
-<!-- show all switches !-->
-<section class="display-devices" ng-if="device.allSwitches.length">
-  <h4>Switches</h4>
-  <hr>
-  <div class="row display-devices-row" id="switches">
 
-    <switch ng-repeat="switch in device.allSwitches" sinfo="switch" ng-click=" device.editDevice(switch)"></switch>
+<!-- show all switches !-->
+<section class="display-devices" ng-if="device.allDev.switch.length">
+  <h4 data-toggle="collapse" data-target="#switches-list">Switches</h4>
+  <div class="collapse" id="switches-list">
+    <devices-dev ng-repeat="switch in device.allDev.switch" devinfo="switch"></devices-dev>
   </div>
+  <hr>
 </section>
 <!-- show all shutters !-->
-<section class="display-devices" ng-if="device.allShutters.length">
-  <h4>Shutters</h4>
+<section class="display-devices" ng-if="device.allDev.shutters.length">
+  <h4 data-toggle="collapse" data-target="#shutters-list">Shutters</h4>
   <hr>
-  <div class="row display-devices-row" id="switches">
-
-    <shutter ng-repeat="shutter in device.allShutters" shinfo="shutter" ng-click=" device.editDevice(shutter)"></shutter>
+  <div class="collapse" id="shutters-list">
+    <devices-dev ng-repeat="shutter in device.allDev.shutters" devinfo="shutter"></devices-dev>
   </div>
 </section>
 <!-- show all thermostats !-->
-<section class="display-devices" ng-if="device.allThermos.length">
-  <h4>Thermostat</h4>
-  <hr>
-  <div class="row display-devices-row" id="thermostat">
-
-    <thermostat ng-repeat="thermo in device.allThermos" tinfo="thermo" ng-click="device.editDevice(thermo)"></thermostat>
+<section class="display-devices" ng-if="device.allDev.thermostat.length">
+  <h4 data-toggle="collapse" data-target="#thermostats-list">Thermostat</h4>
+  <div class="collapse" id="thermostats-list">
+    <devices-dev ng-repeat="thermo in device.allDev.thermostat" devinfo="thermo"></devices-dev>
   </div>
+  <hr>
 </section>
 <!-- show all remotes !-->
-<section class="display-devices" ng-if="device.allTvRemotes.length">
-  <h4>Remotes</h4>
-  <hr>
-  <div class="row display-devices-row" id="remotes">
-
-    <remote ng-repeat="cRemote in device.allTvRemotes track by cRemote.id" tvinfo="cRemote" ng-click="device.editDevice(cRemote)"></remote>
+<section class="display-devices" ng-if="device.allRemotes.tv.length">
+  <h4 data-toggle="collapse" data-target="#remotes-list">Remotes</h4>
+  <div class="collapse" id="remotes-list">
+    <devices-dev ng-repeat="cRemote in device.allRemotes.tv track by cRemote.id" devinfo="cRemote"></devices-dev>
   </div>
+  <hr>
 </section>
 <!-- show all cameras !-->
-<section class="display-devices" ng-if="device.allCameras.length">
-  <h4>Cameras</h4>
-  <hr>
-  <div class="row display-devices-row" id="cameras">
-
-    <camera ng-repeat="camera in device.allCameras" cinfo="camera" ng-click="device.editDevice(camera)"></camera>
+<section class="display-devices" ng-if="device.allDev.camera.length">
+  <h4 data-toggle="collapse" data-target="#cameras-list">Cameras</h4>
+  <div class="collapse" id="cameras-list">
+    <devices-dev ng-repeat="camera in device.allDev.camera" devinfo="camera"></devices-dev>
   </div>
+  <hr>
 </section>
 <!-- show all sensors !-->
-<section class="display-devices" ng-if="device.allSensors.length">
-  <h4>Sensors</h4>
-  <hr>
-  <div class="row display-devices-row" id="cameras">
-
-    <sensor ng-repeat="sensor in device.allSensors" sensorinfo="sensor" ng-click="device.editDevice(sensor)"></sensor>
+<section class="display-devices" ng-if="device.allDev.sensor.length">
+  <h4 data-toggle="collapse" data-target="#sensors-list">Sensors</h4>
+  <div class="collapse" id="sensors-list">
+    <devices-dev ng-repeat="sensor in device.allDev.sensor" devinfo="sensor"></devices-dev>
   </div>
+  <hr>
+</section>
+
+<!-- show all sensors !-->
+<section class="display-devices" ng-if="device.allBlacklistedDev.length">
+  <h4 data-toggle="collapse" data-target="#blacklisted-list">Blacklisted</h4>
+  <div class="collapse" id="blacklisted-list">
+      <devices-dev ng-repeat="dev in device.allBlacklistedDev track by dev.id" devinfo="dev"></devices-dev>
+  </div>
+  <hr>
 </section>
 
 <section class="custom-modal-window edit-device-modal">
   <section class="custom-modal-wrap">
     <div class="edit-device-rename">
       <h3>Device Settings</h3>
-      <span class="color-transparent">
+      <!--<span class="color-transparent">
         Add to favorites
         <input type="checkbox" id="add-to-favorites" ng-model="device.activeDevice.favorites">
         <label for="add-to-favorites" title="add to favorites"></label>
-      </span>
+      </span>!-->
       <div class="form-input-wrap">
         <label for="rename-device" class="form-label">
           Rename device
@@ -117,6 +120,7 @@
           <input type="text" id="rtsp-camera" class="form-input" ng-model="device.activeDevice.rtsp">
         </span>
 
+        <!-- if editing remote show options !-->
         <span ng-show="device.activeDevice.type === 'tv'">
 
           <label class="form-label" for="ir-output-remote">IR Output</label>
@@ -145,8 +149,8 @@
       </div>
 
       <div class="edit-devices-btn-wrap">
-        <button type="" class="button red-btn" ng-click="device.deleteDevice(); device.closeCustomModal()">
-          Delete
+        <button type="" class="button orange-btn" ng-click="device.closeCustomModal()">
+          Cancel
         </button>
         <button type="submit" class="button blue-btn" ng-click="device.saveDeviceOptions(); device.closeCustomModal()">
           Save
@@ -164,7 +168,8 @@
     <div class="add-camera-step-1">
       <form type="form" ng-submit="device.addNewCamera()" autocomplete="off" id="add-camera-form">
         <div class="col-md-6 form-input-wrap">
-
+          <input type="text" class="hidden-input">
+          <input type="password" class="hidden-input">
           <label for="add-camera-name" class="form-label">Name</label>
           <input type="text" id="add-camera-name" class="form-input" required>
 
@@ -172,7 +177,7 @@
           <input type="text" id="add-camera-desc" class="form-input">
 
           <label for="add-camera-user" class="form-label">Username</label>
-          <input type="email" id="add-camera-user" class="form-input">
+          <input type="text" id="add-camera-user" class="form-input">
 
           <label for="add-camera-password" class="form-label">Password</label>
           <input type="password" id="add-camera-password" class="form-input">
@@ -202,14 +207,14 @@
       </div>
     </div>
     <div class="add-new-footer">
-      <button ng-hide="device.addCamSuccess || device.addCamSuccess === false" type="reset" class="button settings-cancel-btn" ng-click="device.closeCustomModal()" form="add-camera-form">
+      <button ng-hide="device.addCamSuccess || device.addCamSuccess === false" type="reset" class="button orange-btn" ng-click="device.closeCustomModal()" form="add-camera-form">
         Cancel
       </button>
-      <button ng-show="device.addCamSuccess === false" type="button" class="button settings-cancel-btn" ng-click="device.restoreAddCamModal()">
+      <button ng-show="device.addCamSuccess === false" type="button" class="button orange-btn" ng-click="device.restoreAddCamModal()">
         Go back
       </button>
 
-      <button ng-hide="device.addCamSuccess || device.addCamSuccess === false" type="submit" class="button settings-save-btn" form="add-camera-form">
+      <button ng-hide="device.addCamSuccess || device.addCamSuccess === false" type="submit" class="button blue-btn" form="add-camera-form">
         Save and Continue
       </button>
       <button ng-show="device.addCamSuccess || device.addCamSuccess === false" type="button" class="button settings-save-btn" ng-click="device.restoreAddCamModal(); device.closeCustomModal()">
@@ -272,10 +277,10 @@
       </div>
     </form>
     <div class="add-new-footer">
-      <button type="reset" class="button settings-cancel-btn" form="add-remote-form" ng-click="device.closeCustomModal()">
+      <button type="reset" class="button orange-btn" form="add-remote-form" ng-click="device.closeCustomModal()">
         Cancel
       </button>
-      <button type="submit" class="button settings-save-btn" form="add-remote-form">
+      <button type="submit" class="button blue-btn" form="add-remote-form">
         Save
       </button>
     </div>
