--- a/local/html_route/settings/server_template.html
+++ b/local/html_route/settings/server_template.html
@@ -1,6 +1,7 @@
+<h2 class="color-white">Settings</h2>
 <div class="settings-title">
   <a ui-sref="frame.server-settings" ui-sref-active="settings-active-btn">
-    <h3>Server Settings</h3>
+    <h4>Server Settings</h4>
   </a>
 </div>
 
@@ -11,6 +12,150 @@
 
 <!-- general server settings !-->
 <div class="settings-content-wrap" ng-hide="settingsToggleBtn">
+
+  <div class="settings-box-wrap">
+    <div class="settings-box">
+      <h4>Serever status</h4>
+
+      <div class="server-status-btn online" ng-if="server.upToDate">
+        <small>Your server is currently</small>
+        <p class="color-green">Up to date.</p>
+      </div>
+
+      <div class="server-status-btn offline" ng-if="!server.upToDate" ng-click="server.updateApp()">
+        <small>Your server is currently</small>
+        <p class="color-red">Not up to date.</p>
+        <p>Update now</p>
+      </div>
+
+      <h5 class="color-transparent">Version:
+        <span class="color-white">{{server.serverInfoData.version}}</span>
+      </h5>
+      <button type="button" class="settings-btn reboot" ng-click="server.updateApp()">Reboot Server</button>
+    </div>
+
+    <div class="settings-box">
+      <h4>Server info</h4>
+
+      <p class="color-green server-status-indicator" ng-if="!God.serverOffline">Online</p>
+      <p class="color-red server-status-indicator" ng-if="God.serverOffline">Offline</p>
+
+      <p class="color-transparent">Ping:
+        <span class="color-white">{{server.serverInfoData.ping}}</span>
+      </p>
+      <p class="color-transparent">IP:
+        <span class="color-white">{{server.serverInfoData.ip}}</span>
+      </p>
+      <p class="color-transparent">External IP:
+        <span class="color-white">{{server.serverInfoData.external_ip}}</span>
+      </p>
+      <p class="color-transparent">OS:
+        <span class="color-white">{{server.serverInfoData.node_platform}}</span>
+      </p>
+      <p class="color-transparent">Node version:
+        <span class="color-white">{{server.serverInfoData.node_version}}</span>
+      </p>
+      <p class="color-transparent">Node arch:
+        <span class="color-white">{{server.serverInfoData.node_arch}}</span>
+      </p>
+
+    </div>
+
+    <div class="settings-box">
+      <h4>Bridges</h4>
+      <p class="server-status-indicator">{{server.bridges.length}}</p>
+      <p class="color-transparent">Bridges currently on this server</p>
+
+      <p>
+        <span class="color-white" ng-repeat="bridge in server.bridges">{{bridge.name}}
+          <span ng-hide="$index == server.bridges.length-1">,</span>
+        </span>
+      </p>
+    </div>
+  </div>
+
+  <div class="settings-box-wrap">
+    <div class="settings-box grow-box no-padding">
+      <div class="settings-box-nav">
+        <h4>Server Location</h4>
+        <button class="settings-btn location" ng-click="server.useIpAddress()">
+          Use your IP location
+        </button>
+      </div>
+      <google-maps></google-maps>
+    </div>
+
+    <div class="settings-box no-padding">
+      <h4>Server Activities</h4>
+      <form type="form" id="change-server-name-form" autocomplete="off" ng-submit="server.changeServerName(server.serverInfoData.name)">
+        <input type="text" id="settings-server-name" placeholder="Server name" class="form-input" ng-model="server.serverInfoData.name" required pattern=".{3,15}">
+        <button type="submit" class="settings-btn green rename">Rename</button>
+      </form>
+      <div class="settings-box-nav settings-box-btn-wrap">
+        <button type="button" class="settings-btn" data-toggle="collapse" data-target="#backup">Backup</button>
+        <span>
+          <input type="file" id="restore-server" accept="application/json" onchange="angular.element(this).scope().restore(this)">
+          <label for="restore-server" class="settings-btn green">
+            Restore
+          </label>
+        </span>
+      </div>
+    </div>
+  </div>
+
+  <div id="backup" class="collapse settings-backup">
+    <h4 class="color-white">Download your backup form <a id="download-backup" download="nhome-config.json">HERE</a></h4>
+  </div>
+
+  <div class="settings-box-wrap">
+    <button data-toggle="collapse" data-target="#server-log" class="settings-btn">
+      <h4>Server Log</h4>
+    </button>
+
+    <div class="collapse settings-box" id="server-log">
+      <div class="server-log-li">
+        <h5 class="color-transparent">Server Action</h5>
+        <h5 class="color-transparent">Time and Date</h5>
+      </div>
+
+      <ul class="server-log-list">
+        <li class="server-log-li" ng-repeat="log in server.serverLog">
+          <!--<span class="color-white">{{log.name}}</span>!-->
+          <p class="color-white">{{log.msg}} </p>
+          <p class="color-transparent">{{log.time * 1000 | date: 'd/MMM/yyyy HH:mm:ss'}}</p>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="settings-box-wrap">
+    <button data-toggle="collapse" data-target="#action-log" class="settings-btn">
+      <h4>Action Log</h4>
+    </button>
+    <div class="collapse settings-box" id="action-log">
+      <div class="server-log-li">
+        <h5 class="color-transparent">Username</h5>
+        <h5 class="color-transparent">Action</h5>
+      </div>
+
+      <ul class="server-log-list">
+        <li class="server-log-li" ng-repeat="log in server.actionLog">
+          <p class="color-white">{{log.user}} turned
+            <b ng-if="server.testRegex(log.action, 'off')" class="color-orange">OFF</b>
+            <b ng-if="server.testRegex(log.action, 'on')" class="color-blue">ON</b>
+          </p>
+          <p class="color-white">{{log.time | date: 'd/MMM/yyyy HH:mm:ss'}}</p>
+        </li>
+        <li ng-click="server.loadMoreLog()" class="button server-log-load-more">
+          <p>Load more</p>
+          <img src="img/button/plus-lblue.png">
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<!--
   <div class="row settings-row">
     <div class="col-xs-12 col-sm-12 col-md-10 settings-tab-hlp">
       <h4>Server Status</h4>
@@ -85,6 +230,15 @@
         Backup
       </button>
     </div>
+
+    <div class="col-xs-12 col-sm-12 col-md-6 settings-tab-hlp justify-end">
+      <button type="button" class="button orange-btn" ng-click="server.leaveServer()">
+        Leave Server
+      </button>
+      <a ui-sref="frame.addserver" class="button blue-btn">
+        Add New Servers
+      </a>
+    </div>
   </div>
 
   <div id="backup" class="collapse settings-backup">
@@ -118,58 +272,96 @@
     Delete Server
   </button>
 </div>
-
+!-->
 <!-- user settings !-->
 <div class="settings-content-wrap" ng-show="settingsToggleBtn">
-  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 settings-box-wrap">
-    <h3>Invite User</h3>
-    <small class="color-transparent">Invite users to your server</small>
+  <div class="settings-box-wrap">
+    <div class="settings-box" ng-show="server.activeUser.level === 'OWNER'">
+      <h3>Invite User</h3>
+      <small class="color-transparent">Invite users to your server</small>
 
-    <form type="form" autocomplete="off" ng-submit="server.inviteUser()">
-      <div class="form-input-wrap">
-        <label for="invite-email" class="form-label">Email</label>
-        <input type="email" class="form-input" id="invite-email" name="Email" required>
+      <form type="form" autocomplete="off" ng-submit="server.inviteUser()">
+        <div class="form-input-wrap">
+          <label for="invite-email" class="form-label">Email</label>
+          <input type="email" class="form-input" id="invite-email" name="Email" required>
 
-        <label for="invite-msg" class="form-label">Short Message</label>
-        <input type="text" class="form-input" id="invite-msg" name="Invite Message" required>
+          <label for="invite-msg" class="form-label">Short Message</label>
+          <input type="text" class="form-input" id="invite-msg" name="Invite Message" required>
 
-        <label for="invite-status" class="form-label">Choose Status</label>
-        <select class="form-select" id="invite-status">
-          <option value="ADMIN">Admin</option>
-          <option value="OWNER">Owner</option>
-          <!-- <option value="USER">User</option> !-->
-        </select>
-      </div>
-      <br>
-      <button type="submit" class="button  blue-btn">
-        Invite
-      </button>
-      <button type="reset" class="button orange-btn">
-        Cancel
-      </button>
-    </form>
-  </div>
-
-  <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 settings-user-list-wrap">
-    <h3>User list</h3>
-    <div class="settings-user-list-nav">
-      <p>Email</p>
-      <p>Name</p>
-      <p>Status</p>
+          <label for="invite-status" class="form-label">Choose Status</label>
+          <select class="form-select" id="invite-status">
+            <option value="ADMIN">Admin</option>
+            <option value="OWNER">Owner</option>
+            <!-- <option value="USER">User</option> !-->
+          </select>
+        </div>
+        <br>
+        <div class="display-flex">
+          <button type="submit" class="settings-btn" ng-class="{'green': server.inviteSuccess}">
+            Invite
+          </button>
+          <button type="reset" class="settings-btn green">
+            Clear
+          </button>
+        </div>
+      </form>
     </div>
 
-    <ul class="settings-user-list">
-      <li ng-repeat="user in server.userList">
-        <p class="settings-user-list-item">{{user.email}}</p>
-        <p class="settings-user-list-item">{{user.username}}</p>
-        <select class="form-select settings-user-list-item" ng-model="user.level" ng-change="server.changeUserLevel(user.email, user.level)">
-          <option value="OWNER">Owner</option>
-          <option value="ADMIN">Admin</option>
-          <option value="USER">User</option>
-          <option value="DELETE" class="settings-delet-user">Delete</option>
-        </select>
-      </li>
-    </ul>
+    <div class="settings-box settings-table-wrap">
+      <h3>User list</h3>
+
+      <table class="settings-table">
+        <tr class="color-transparent">
+          <th>
+            Email
+          </th>
+          <th>
+            Name
+          </th>
+          <th>
+            Staus
+          </th>
+        </tr>
+        <tr ng-repeat="user in server.userList">
+          <td>
+            {{user.email}}
+          </td>
+          <td>
+            {{user.username}}
+          </td>
+          <td ng-hide="server.activeUser.level === 'OWNER'">
+            {{user.level}}
+          </td>
+          <td ng-show="server.activeUser.level === 'OWNER'">
+            <select class="form-select settings-user-list-item" ng-model="user.level" ng-change="server.changeUserLevel(user.email, user.level)">
+              <option value="OWNER">Owner</option>
+              <option value="ADMIN">Admin</option>
+              <option value="USER">User</option>
+              <option value="DELETE" class="settings-delet-user">Delete</option>
+            </select>
+          </td>
+        </tr>
+      </table>
+      <!--<div class="server-log-li">
+        <h5 class="color-transparent">Email</h5>
+        <h5 class="color-transparent">Name</h5>
+        <h5 class="color-transparent">Status</h5>
+      </div>
+
+      <ul class="server-log-list">
+        <li class="server-log-li" ng-repeat="user in server.userList">
+          <p class="settings-user-list-item">{{user.email}}</p>
+          <p class="settings-user-list-item">{{user.username}}</p>
+          <p class="settings-user-list-item" ng-hide="server.activeUser.level === 'OWNER'">{{user.level}}</p>
+          <select class="form-select settings-user-list-item" ng-model="user.level" ng-change="server.changeUserLevel(user.email, user.level)" ng-show="server.activeUser.level === 'OWNER'">
+            <option value="OWNER">Owner</option>
+            <option value="ADMIN">Admin</option>
+            <option value="USER">User</option>
+            <option value="DELETE" class="settings-delet-user">Delete</option>
+          </select>
+        </li>
+      </ul>!-->
+    </div>
   </div>
 </div>
 
@@ -177,6 +369,6 @@
   <div class="leave-server-content-wrap">
     <h2 class="color-white">You're about to leave server.</h2>
     <h3 class="color-white">Choose where you wan't to connect</h3>
-    <button type="button" ng-repeat="server in server.leveServers" class="button leve-server-btn" ng-click="God.switchServer(server)">{{server.name}}</button>
+    <button type="button" ng-repeat="server in server.leveServers" class="button leve-server-btn" ng-click="server.switchServer(server)">{{server.name}}</button>
   </div>
 </div>
